--- a/source/animation.html
+++ b/source/animation.html
@@ -34,13 +34,13 @@
                   "path": "#"})
             </ul>
         <div class="animation__cloud">
-          <div class="animation__cloud-one"></div>
-          <div class="animation__cloud-two"></div>
-          <div class="animation__cloud-three"></div>
-          <div class="animation__cloud-four"></div>
-          <div class="animation__cloud-five"></div>
-          <div class="animation__cloud-six"></div>
-          <div class="animation__sun"></div>
+          <div class="animation__cloud-one animation__img"></div>
+          <div class="animation__cloud-two animation__img"></div>
+          <div class="animation__cloud-three animation__img"></div>
+          <div class="animation__cloud-four animation__img"></div>
+          <div class="animation__cloud-five animation__img"></div>
+          <div class="animation__cloud-six animation__img"></div>
+          <div class="animation__sun animation__img"></div>
         </div>
         <div class="animation__town">
           <div class="animation__cars">
