--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,41 +38,53 @@
           <ul class="category__list">
             @@include('blocks/product-list.html',{
               "name": "APPAREL KIDS",
-              "img": "products__list-item__one",
-              "link": "products__link__apparel",
-              "href": "#"
+              "img": "products__list-item__catalog-one",
+              "link": "products__link-catalog",
+              "link-item": "products__link-catalog__apparel",
+              "href": "#",
+              "list": "products__catalog"
             })
             @@include('blocks/product-list.html',{
               "name": "HOLIDAY SHOP",
-              "img": "products__list-item__two",
-              "link": "products__link__holiday",
-              "href": "#"
+              "img": "products__list-item__catalog-two",
+              "link": "products__link-catalog",
+              "link-item": "products__link-catalog__holiday",
+              "href": "#",
+              "list": "products__catalog"
             })
             @@include('blocks/product-list.html',{
               "name": "TOYS",
-              "img": "products__list-item__three",
-              "link": "products__link__toys",
-              "href": "./toys.html"
+              "img": "products__list-item__catalog-three",
+              "link": "products__link-catalog",
+              "link-item": "products__link-catalog__toys",
+              "href": "./toys.html",
+              "list": "products__catalog"
             })
             <li class="category__list--empty"></li>
             <li class="category__list--empty"></li>
             @@include('blocks/product-list.html',{
               "name": "ACCESSORIES",
-              "img": "products__list-item__four",
-              "link": "products__link__accessories",
-              "href": "#"
+              "img": "products__list-item__catalog-four",
+              "link": "products__link-catalog",
+              "link-item": "products__link-catalog__accessories",
+              "href": "#",
+              "list": "products__catalog"
             })
             @@include('blocks/product-list.html',{
               "name": "SALE",
-              "img": "products__list-item__five",
-              "link": "products__link__sale",
-              "href": "#"
+              "img": "products__list-item__catalog-five",
+              "link": "products__link-catalog",
+              "link-item": "products__link-catalog__sale",
+              "href": "#",
+              "list": "products__catalog"
             })
             @@include('blocks/product-list.html',{
               "name": "APPAREL ADULTS",
-              "img": "products__list-item__six",
-              "link": "products__link__adults",
-              "href": "#"
+              "img": "products__list-item__catalog-six",
+              "link": "products__link-catalog",
+              "link-item": "products__link-catalog__adults",
+              "href": "#",
+              "list": "products__catalog"
             })
           </ul>
         </div>
