--- a/source/contact.html
+++ b/source/contact.html
@@ -34,12 +34,14 @@
           "path": "#"})
       </ul>
       <section class="contact__wrapper">
+        <section class="contact__form">
         @@include('blocks/form.html', {
           "class": "form__input-change",
           "fontContact": "form__checkbox__contact",
           "fontPopup": "",
           "checked": "checked"
         })
+        </section>
         <section class="contact__info">
           <h2 class="contact__subtitle">Info</h2>
           <p class="contact__text">Our support team are on-hand to assist with any issues you are experiencing.</p>
