--- a/source/animation.html
+++ b/source/animation.html
@@ -33,6 +33,7 @@
                   "text": "Animation",
                   "path": "#"})
             </ul>
+      <div class="animation__wrapper">
         <div class="animation__cloud">
           <div class="animation__cloud-one animation__img"></div>
           <div class="animation__cloud-two animation__img"></div>
@@ -40,8 +41,9 @@
           <div class="animation__cloud-four animation__img"></div>
           <div class="animation__cloud-five animation__img"></div>
           <div class="animation__cloud-six animation__img"></div>
-          <div class="animation__sun animation__img"></div>
         </div>
+        <div class="animation__sun animation__img"></div>
+      </div> 
         <div class="animation__town">
           <div class="animation__cars">
             <div class="animation__car-one"></div>
@@ -62,7 +64,7 @@
           <div class="animation__man-message"></div>
           <div class="animation__man-message-two"></div>
           <div class="animation__lantern"></div>
-        </div>          
+        </div>         
     </main>
     @@include('blocks/footer.html')    
 </body>
