--- a/source/contact.html
+++ b/source/contact.html
@@ -34,7 +34,9 @@
           "path": "#"})
       </ul>
       <section class="contact__wrapper">
+        <h2 class="contact__title-hidden">contact</h2>
         <section class="contact__form">
+          <h2 class="contact__title-hidden">contact</h2>
         @@include('blocks/form.html', {
           "class": "form__input-change",
           "fontContact": "form__checkbox__contact",
