добавила базовую SEO оптимизацию

--- a/source/blog.html
+++ b/source/blog.html
@@ -6,9 +6,9 @@
     <meta name="google" content="notranslate">
     <meta name="format-detection" content="telephone=no">
 
-    <title>DL Academy</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>DLK | Blog</title>
+    <meta name="description" content="More information about the company">
+    <meta name="keywords" content="HTML CSS JS GULP SVG Animation Grid Flexbox">
 
     <script>
       var docElement = document.documentElement;
