--- a/source/index.html
+++ b/source/index.html
@@ -6,9 +6,9 @@
     <meta name="google" content="notranslate">
     <meta name="format-detection" content="telephone=no">
 
-    <title>DL Academy</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>Design Life Kids: a training project was created based on the layouts from Figma</title>
+    <meta name="description" content="Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults">
+    <meta name="keywords" content="HTML CSS JS GULP SVG Animation Grid Flexbox">
 
     <script>
       var docElement = document.documentElement;
