--- a/source/contact.html
+++ b/source/contact.html
@@ -6,9 +6,9 @@
     <meta name="google" content="notranslate">
     <meta name="format-detection" content="telephone=no">
 
-    <title>DL Academy</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>DLK | Contact</title>
+    <meta name="description" content="Please use the form to contact us with your needs. Send us a message and we'll respond as soon as possible">
+    <meta name="keywords" content="HTML CSS JS GULP SVG Animation Grid Flexbox">
 
     <script>
       var docElement = document.documentElement;
