--- a/source/grid.html
+++ b/source/grid.html
@@ -6,9 +6,9 @@
     <meta name="google" content="notranslate">
     <meta name="format-detection" content="telephone=no">
 
-    <title>DL Academy</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>DLK | Grid</title>
+    <meta name="description" content="Layout of an adaptive page with CSS Grid">
+    <meta name="keywords" content="HTML CSS JS GULP SVG Animation Grid Flexbox">
 
     <script>
       var docElement = document.documentElement;
