--- a/source/animation.html
+++ b/source/animation.html
@@ -66,6 +66,7 @@
           <div class="animation__lantern"></div>
         </div>         
     </main>
-    @@include('blocks/footer.html')    
+    @@include('blocks/footer.html')  
+    <script src="js/burger.js"></script>   
 </body>
 </html>
