--- a/source/contact.html
+++ b/source/contact.html
@@ -52,6 +52,7 @@
         </section>
       </section>
     </main>
-    @@include('blocks/footer.html')    
+    @@include('blocks/footer.html')  
+    <script src="js/burger.js"></script>   
 </body>
 </html>
