--- a/source/toys.html
+++ b/source/toys.html
@@ -155,5 +155,6 @@
         </section>
     </main>
     @@include('blocks/footer.html') 
+    <script src="js/burger.js"></script> 
   </body>
 </html>
