--- a/source/catalog.html
+++ b/source/catalog.html
@@ -97,5 +97,6 @@
       </section> 
     </main>
     @@include('blocks/footer.html')
+    <script src="js/burger.js"></script> 
   </body>
 </html>
