--- a/source/grid.html
+++ b/source/grid.html
@@ -91,6 +91,7 @@
             </div>
           </div>
     </main>
-    @@include('blocks/footer.html')    
+    @@include('blocks/footer.html')
+    <script src="js/burger.js"></script>     
 </body>
 </html>
